--- a/public/css/app.css
+++ b/public/css/app.css
@@ -58,6 +58,7 @@ button {
     padding: 5px;
     margin: auto;
     border-radius: 5px;
+    background-color: #D1D1D1;
 }
 
 .no-questions {
